Make issue headers to be more visible #36

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,8 @@ header {
 }
 
 .issue h4 a {
+  color: #2764B6;
+  font-weight: bold;
   overflow-wrap: break-word;
 }
 
